[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[project]
name = "functionfuse"
version = "0.0.1"
authors = [
  { name="Viatcheslav Gurev", email="vgurev@us.ibm.com" },
]
description = "Front-end for workflows"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3"
]

[tool.setuptools]
py-modules = ["functionfuse"]
